# Shikin

./: .env.example  .fallowrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  README.md  components.json  eslint.config.js  index.html  package.json  package.json.tmp  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.ava/: state.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: README.md  package-lock.json  package.json
cli/src/: app-data-dir.test.ts  app-data-dir.ts  cli.test.ts  cli.ts  data-server-chatgpt.test.ts  data-server-db.test.ts  data-server-http-contract.test.ts  data-server-http-security.test.ts  data-server-security.test.ts  database.test.ts  database.ts  duplicate-detection.ts  insights.sqlite.integration.test.ts  insights.ts  mcp-server.test.ts  mcp-server.ts  migrations.ts  money.ts  notebook-path.test.ts  notebook-path.ts  notebook.ts  oauth-server.test.ts  plugins.test.ts  plugins.ts  tools.sqlite-transaction.test.ts  tools.test.ts  tools.ts
designs/: shikin-apple-core.pen
docs/: AI-TOOLS.md  ARCHITECTURE.md  CONTRIBUTING.md  DATABASE.md  README.md  ROADMAP.md  valute-research.md
docs/guides/: ARCHITECTURE.md  CONTRIBUTING.md  RELEASE-CHECKLIST.md
docs/planning/: IDEAS.md  ROADMAP.md
docs/reference/: AI-TOOLS.md  API.md  (+7 more)
e2e/: accounts.spec.ts  budgets.spec.ts  dashboard.spec.ts  i18n.spec.ts  layout.spec.ts  navigation.spec.ts  responsive.spec.ts  settings.spec.ts  subscriptions.spec.ts  transactions.spec.ts
scripts/: app-data-dir.mjs  data-server-chatgpt.mjs  data-server-db.d.mts  data-server-db.mjs  data-server-security.d.mts  data-server-security.mjs  data-server.mjs  dev.mjs  e2e-dev.mjs  install-cli.sh  install-linux.sh  install-skill.sh  oauth-server.mjs  release-preflight.mjs  test-ai.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: Shikin.desktop
src-tauri/migrations/: 001_core_tables.sql  002_ai_memories.sql  003_credit_cards.sql  011_net_worth_snapshots.sql  015_primary_account.sql  017_investment_type_cetes.sql  018_placeholder_transactions.sql
src-tauri/src/: lib.rs  main.rs
(+325 files in other folders)
