[package]
name = "shikin"
version = "0.1.0"
description = "AI-first, local-first personal finance manager"
authors = ["ASF"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "shikin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["net", "io-util", "time", "macros"] }
url = "2"
